/** \file
 *
 *  This file contains special DoxyGen information for the generation of the main page and other special
 *  documentation pages. It is not a project source file.
 */

 /** \page Page_ChangeLog Project Changelog
  *
  *  \section Sec_ChangeLogXXXXXX Version XXXXXX
  *
  *  - Removed psuedo-scheduler, dynamic memory block allocator from the library (no longer needed and not used respectively)
  *  - Added new class drivers and matching demos to the library for rapid application development
  *  - Added incomplete device and host mode demos for later enhancement
  *  - Changed bootloaders to use FLASHEND rather than the existence of RAMPZ to determine if far FLASH pointers are needed
  *  - Error status LEDs shown when device endpoint configuration fails to complete in all demos and projects
  *  - Low level API MIDI device demo no longer blocks if a note change event is sent while the endpoint is not ready
  *  - Fixes to MassStorageHost for better device compatibility (increase command timeout, change MassStore_WaitForDataReceived()
  *    to only unfreeze and check one data pipe at a time)
  *  - Internal per-device preprocessing conditions changed to per-device series rather than per controller group for finer-grain
  *    internal control
  *  - Added new USB_Host_SetDeviceConfiguration() convenience function for easy configuration selection of devices while in USB
  *    host mode
  *  - Added new USB_Host_ClearPipeStall() convenience function to clear a stall condition on an attached device's endpoint
  *  - Added new USB_Host_GetDeviceDescriptor() convenience function to retrieve the attached device's Device descriptor
  *  - Added USB Missle Launcher project, submitted by Dave Fletcher
  *  - Pipe_GetErrorFlags() now returns additional error flags for overflow and underflow errors
  *  - Make Pipe_ConfigurePipe() mask the given endpoint number against PIPE_EPNUM_MASK to ensure the endpoint IN direction bit is