@@ -134,7 +134,7 @@ uint8_t DComp_NextHIDInterface(void* CurrentDescriptor)
 	/* Determine if the current descriptor is an interface descriptor */
 	if (DESCRIPTOR_TYPE(CurrentDescriptor) == DTYPE_Interface)
 	{
-		/* Check the HID descriptor class and protocol, break out if correct class/protocol interface found */
+		/* Check the HID descriptor class, break out if correct class/protocol interface found */
 		if (DESCRIPTOR_CAST(CurrentDescriptor, USB_Descriptor_Interface_t).Class == HID_CLASS)
 		{
 			/* Indicate that the descriptor being searched for has been found */
